# audio-switcher

./: .gitignore  AudioSwitcher.csproj  AudioSwitcher.sln  Cargo.toml  NativeMethods.txt  README.md  app.manifest  build.bat  build_release.bat  check_env.bat  package.ps1
docs/: VERSIONING.md
src/: AudioManager.cs  AudioSessionManager.cs  Locale.cs  Program.cs  StartupManager.cs  ThemeDetector.cs  TrayApp.cs  TrayMenuBuilder.cs  audio.rs  lib.rs  main.rs  startup.rs  theme.rs  tray.rs
src/Interop/: ComInterfaces.cs  NativeMethods.cs  Win32Defs.cs
tests/Smoke/: Program.cs  Smoke.csproj
