[package]
name = "audio-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.30"
tray-icon = { version = "0.24", default-features = false }
com-policy-config = "0.6"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
widestring = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
